--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -21,33 +21,52 @@ header {
     top: 0;
     z-index: 100;
     margin-left: 20px;
+    padding: 7px;
+    background-color: white;
   }
 
   .nav-wrapper{
     background-color: white;
     width: 100%;
     float:right;
+    padding-bottom:6px;
     padding-right: 20px;
+    padding-bottom: 10px;
     text-align: right;
     box-shadow: 0 6px 7px 0 rgba(0,0,0,.15);
   }
 
   .nav-element{
     display: inline-block;
-    padding: 10px;
+    padding: 10px 16px;
+    margin-left:5px;
     font-weight: 600;
-    font-size: 20px;
-    border: 5px solid white;
+    font-size: 16px;
+    border: solid white 5px;
   }
 
   .nav-element:hover {
-    border: 5px solid black;
+    background-color: black;
+    color: white;
+    border: black solid 5px;
+  }
+
+  .highlighted {
+    background-color: white;
+    color: black;
+    border: black solid 5px;
+  }
+
+  .highlighted:hover {
+    background-color: black;
+    color: white;
   }
 
   .pinned {
     position: fixed;
     top: 0;
     right: 0;
+    padding:4px 20px;
   }
 
   .rescale {
