--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -24,7 +24,7 @@ footer {
   }
 
   .footer-wrapper{
-    background-image: url('../../assets/footer-background.png');
+    background-image: url('../../assets/footer-background.jpg');
     background-repeat:repeat-x;
     color:#fff;
     background-color:#000;
