--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -21,7 +21,10 @@ header {
     top: 0;
     z-index: 100;
     margin-left: 20px;
-    padding: 7px;
+    padding-top: 7px;
+    padding-left: 7px;
+    padding-right: 7px;
+    // 
     background-color: white;
   }
 
@@ -66,7 +69,7 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    padding:4px 20px;
+    padding: 5px;
   }
 
   .rescale {
