Update nav items to match prod
Also did a quick fix to min-width of dropdown css.

co-authored-by: Jake Clark <jake.clark@gmail.com>

--- a/src/components/nav-dropdown/nav-dropdown.scss
+++ b/src/components/nav-dropdown/nav-dropdown.scss
@@ -33,6 +33,7 @@ nav-dropdown {
     margin-left: -21px;
     margin-top: 5px;
     text-align: left;
+    min-width:173px;
   }
 
   .dropdown-wrapper {
