Adding project data likn to nav

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -92,6 +92,10 @@ header {
     padding: 5px;
   }
 
+  .purple {
+    color:#ea1d76;
+}
+
   .rescale {
     -webkit-animation: scale-up 0.2s ease forwards;
             animation: scale-up 0.2s ease forwards;
