Make header responsive

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -59,7 +59,7 @@ header {
     height: 124px;
   }
 
-  .nav-wrapper.pinned {
+  .nav-wrapper {
     box-shadow: $box-shadow;
     border-bottom: none;
     display: flex;
@@ -72,7 +72,7 @@ header {
     margin-right: 34px;
   }
 
-  .nav-element{
+  .nav-element {
     display: inline-block;
     padding: 10px 16px;
     margin-left:5px;
@@ -206,154 +206,161 @@ header {
     }
   }
 }
-@media only screen and (max-width: 980px) {
-  header .nav-element {
-    font-size:12px;
-    padding: 10px 10px;
+@media only screen and (max-width: 820px) {
+  .nav-wrapper.pinned {
+    flex-direction: column;
+    align-items: center;
+    .logo {
+      margin-left: 0;
+      margin-top: 12px;
+    }
+    .nav-element-container {
+      margin: 0;
+    }
   }
 }  
-@media only screen and (max-width: 768px) {
-  dataset-list-view {
-    min-width:auto;
-  } 
-  .hamburger {
-    display:block !important;
-  }
-  header .title, .social, .right {
-    display:none;
-  }
-  header .nav-element {
-    display:block;
-    font-size:16px;
-  } 
-  header .nav-wrapper {
-    padding:0px;
-    padding-right:0;
-    padding-bottom:0;
-    width:50%;
-    height:100%;
-    position:fixed;
-    background-color:rgba(26,26,26,1);
-    top:0;
-    right:0px;
-    transition: 1s;
-  }
-  header .nav-element {
-    border:0;
-    color:#fff;
-    font-weight:normal;
-    text-align:left;
-  }
-  header .highlighted {
-    background-color:#1a1a1a;
-  }
-  header .nav-wrapper {
-    display:none;
-  }
-  header .nav-wrapper.open {
-    display:block;
-  }
-  nav-dropdown .dropdown-contents {
-    position:relative !important;
-    z-index: inherit 0 !important;
-    width:100%; 
-    min-width:100%; 
-    margin-top:0 !important;
-    padding-left:20px;
-  } 
-  nav-dropdown .no-bottom:hover {
-    border-bottom: none !important;
-  }
-  nav-dropdown li {
-    line-height:1.2
-}
-  // header .nav-element:hover {
-  //   background-color: #1a1a1a;
-  //   color: white;
-  //   border: none;
-  // }
-}    
-    @media only screen and (max-width: 600px) {
-      main-app-element {
-        margin-top:60px;
-      }
-      header {
-        box-shadow: 0 6px 7px 0 rgba(0,0,0,.25);
-        top:0px;
-        height:60px;
-        width:100%;
-        margin-bottom:10px;
-        position:fixed;
-      }
-      header .wrapper {
-        margin:0px;
-        background:#ffffff;
-      }
-      .hamburger {
-        display:block !important;
-      }
-      header .logo {
-        margin-left:16px;
-      }
-      header .logo img{
-        height:60px;
-      }
-      header .scale-down {
-      animation:none;
-      }
-      header .rescale {
-        animation:none;
-        }
-      header .title, .social, .right {
-        display:none;
-      }
-      header .nav-element {
-        display:block;
-        font-size:16px;
-      } 
-      header .nav-wrapper {
-        padding:0px;
-        padding-right:0;
-        padding-bottom:0;
-        width:50%;
-        height:100%;
-        position:fixed;
-        background-color:rgba(26,26,26,1);
-        top:0;
-        right:0px;
-        transition: 1s;
-        display:none;
-      }
-      header .nav-element {
-        border:0;
-        color:#fff;
-        font-weight:normal;
-        text-align:left;
-      }
-      header .highlighted {
-        background-color:#1a1a1a;
-      }
+// @media only screen and (max-width: 768px) {
+//   dataset-list-view {
+//     min-width:auto;
+//   } 
+//   .hamburger {
+//     display:block !important;
+//   }
+//   header .title, .social, .right {
+//     display:none;
+//   }
+//   header .nav-element {
+//     display:block;
+//     font-size:16px;
+//   } 
+//   header .nav-wrapper {
+//     padding:0px;
+//     padding-right:0;
+//     padding-bottom:0;
+//     width:50%;
+//     height:100%;
+//     position:fixed;
+//     background-color:rgba(26,26,26,1);
+//     top:0;
+//     right:0px;
+//     transition: 1s;
+//   }
+//   header .nav-element {
+//     border:0;
+//     color:#fff;
+//     font-weight:normal;
+//     text-align:left;
+//   }
+//   header .highlighted {
+//     background-color:#1a1a1a;
+//   }
+//   header .nav-wrapper {
+//     display:none;
+//   }
+//   header .nav-wrapper.open {
+//     display:block;
+//   }
+//   nav-dropdown .dropdown-contents {
+//     position:relative !important;
+//     z-index: inherit 0 !important;
+//     width:100%; 
+//     min-width:100%; 
+//     margin-top:0 !important;
+//     padding-left:20px;
+//   } 
+//   nav-dropdown .no-bottom:hover {
+//     border-bottom: none !important;
+//   }
+//   nav-dropdown li {
+//     line-height:1.2
+// }
+//   // header .nav-element:hover {
+//   //   background-color: #1a1a1a;
+//   //   color: white;
+//   //   border: none;
+//   // }
+// }    
+//     @media only screen and (max-width: 600px) {
+//       main-app-element {
+//         margin-top:60px;
+//       }
+//       header {
+//         box-shadow: 0 6px 7px 0 rgba(0,0,0,.25);
+//         top:0px;
+//         height:60px;
+//         width:100%;
+//         margin-bottom:10px;
+//         position:fixed;
+//       }
+//       header .wrapper {
+//         margin:0px;
+//         background:#ffffff;
+//       }
+//       .hamburger {
+//         display:block !important;
+//       }
+//       header .logo {
+//         margin-left:16px;
+//       }
+//       header .logo img{
+//         height:60px;
+//       }
+//       header .scale-down {
+//       animation:none;
+//       }
+//       header .rescale {
+//         animation:none;
+//         }
+//       header .title, .social, .right {
+//         display:none;
+//       }
+//       header .nav-element {
+//         display:block;
+//         font-size:16px;
+//       } 
+//       header .nav-wrapper {
+//         padding:0px;
+//         padding-right:0;
+//         padding-bottom:0;
+//         width:50%;
+//         height:100%;
+//         position:fixed;
+//         background-color:rgba(26,26,26,1);
+//         top:0;
+//         right:0px;
+//         transition: 1s;
+//         display:none;
+//       }
+//       header .nav-element {
+//         border:0;
+//         color:#fff;
+//         font-weight:normal;
+//         text-align:left;
+//       }
+//       header .highlighted {
+//         background-color:#1a1a1a;
+//       }
 
-      header .nav-wrapper.open {
-        display:block;
-      }
-      nav-dropdown .dropdown-contents {
-        position:relative !important;
-        z-index: inherit 0 !important;
-        width:100%; 
-        min-width:100%; 
-        margin-top:0 !important;
-        padding-left:20px;
-      } 
-      nav-dropdown .no-bottom:hover {
-        border-bottom: none !important;
-      }
-      nav-dropdown li {
-        line-height:1.2
-    }
-      // header .nav-element:hover {
-      //   background-color: #1a1a1a;
-      //   color: white;
-      //   border: none;
-      // }
-} 
+//       header .nav-wrapper.open {
+//         display:block;
+//       }
+//       nav-dropdown .dropdown-contents {
+//         position:relative !important;
+//         z-index: inherit 0 !important;
+//         width:100%; 
+//         min-width:100%; 
+//         margin-top:0 !important;
+//         padding-left:20px;
+//       } 
+//       nav-dropdown .no-bottom:hover {
+//         border-bottom: none !important;
+//       }
+//       nav-dropdown li {
+//         line-height:1.2
+//     }
+//       // header .nav-element:hover {
+//       //   background-color: #1a1a1a;
+//       //   color: white;
+//       //   border: none;
+//       // }
+// } 
