--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,77 +6,26 @@ footer {
   }
 
   ul {
+    margin: 0;
+    padding: 0;
     list-style-type:none;
-    display:block;
-    padding:0px;
-    margin:0px;
-    margin-block-start:0;
-    margin-block-end:0;
+    display:flex;
   }
 
-  h2 {
-    font-size:18px;
-  }
   li {
-    display:block;
-    float:left;
-    clear:right;
-    padding:0 30px 20px 0;
-    text-align:left;
-    width:25%;
-    font-size:13px;
+    font-size:12px;
+    margin: 0 10px;
+  }
+
+  .powered-by {
+    font-style: italic;
   }
 
   .footer-wrapper{
-    background-image: url('../../assets/footer-background.jpg');
-    background-repeat:repeat-x;
     color:#fff;
     background-color:#000;
-    padding:30px;
+    padding: 40px 40px;
+    display: flex;
+    justify-content: space-between;
   }
-
-  .background-div {
-    width:100%;
-    font-size:18px;
-    float:left;
-  }
-
-  .copyright{
-    margin-top:20px;
-    padding:4% 0 0 0;
-    display:inline-block;
-    text-align:center;
-    width:92%;
-  }
-
-  .footerLeft{
-    width:70%;
-    float:left;
-    margin:0px;
-  }
-
-  .footerRight{
-    width:26%;
-    text-align:right;
-    padding:20px 0px 0 0;
-    float:left;
-    margin:0px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    .footer-wrapper {
-      background-image: none;
-    }
-    .footerLeft {
-      width:100%;
-      clear:both;
-    }
-    .footerRight {
-      display:none;
-    }
-    .footerLeft li {
-      width:100%;
-    }
-  }
-
 }
