--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,6 @@
 footer {
+  margin-top: auto;
+  min-height: 50px;
 
   a {
     color: #fff;
@@ -8,12 +10,12 @@ footer {
   ul {
     margin: 0;
     padding: 0;
-    list-style-type:none;
-    display:flex;
+    list-style-type: none;
+    display: flex;
   }
 
   li {
-    font-size:12px;
+    font-size: 12px;
     margin: 0 10px;
   }
 
@@ -21,9 +23,9 @@ footer {
     font-style: italic;
   }
 
-  .footer-wrapper{
-    color:#fff;
-    background-color:#000;
+  .footer-wrapper {
+    color: #fff;
+    background-color: #000;
     padding: 40px 40px;
     display: flex;
     justify-content: space-between;
