--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,11 @@ body {
   height: 100%;
   width: 100%;
 }
+
+.content {
+  min-height: 100vh;
+  margin: 0;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
