--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -33,7 +33,7 @@ header {
     margin-left: 40px;
     height: 44px;
     a img {
-      max-height: 100%;
+      height: 100%;
     }
   }
   .hamburger {
