--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,24 +8,37 @@ footer {
   ul {
     margin: 0;
     padding: 0;
-    list-style-type:none;
-    display:flex;
+    list-style-type: none;
+    display: flex;
   }
 
   li {
-    font-size:12px;
+    font-size: 12px;
     margin: 0 10px;
   }
 
-  .powered-by {
+  .left-side-text {
     font-style: italic;
   }
 
-  .footer-wrapper{
-    color:#fff;
-    background-color:#000;
+  .footer-wrapper {
+    color: #fff;
+    background-color: #000;
     padding: 40px 40px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 20px;
+
+    .link {
+      margin-right: 30px;
+      color: white;
+      text-decoration: none;
+    }
   }
 }
